compiler/src/test/resources/golden/errors/lex_unterminated_string.dawn
pub fn main() -> Unit !io =
  println("oops)
