compiler/src/test/resources/golden/errors/lex_unterminated_string.err
error: unterminated string
  --> lex_unterminated_string.dawn:2:11
  |
2 |   println("oops)
  |           ^^^^^^
error: expected an expression, found `<eof>`
  --> lex_unterminated_string.dawn:3:1
  |
3 | 
  | ^
